spelling mistakes, so many of them lol.

--- a/README.org
+++ b/README.org
@@ -2,7 +2,7 @@
 
 * Starintel-doc.nim
 
-This is a port of the starintel-doc specification from pyton to nim.
+This is a port of the starintel-doc specification from python to nim.
 
 it is not 100% feature parity, but in the future i may try a nim2python solution for that.
 
