--- a/changelog.org
+++ b/changelog.org
@@ -3,8 +3,8 @@
 Added new types
 Removed optional types from bookerweb objects
 *** BookerRelation
-Map Relations btween objects, will be useful for relating two objects
-For example a org holding a meeting or a protest with BookerPerson object attending it.
+Map Relations between objects, will be useful for relating two objects
+For example an organization holding a meeting or a protest with BookerPerson object attending it.
 
 *** BookerEvent
 Experimental object to represent an event such as a protest.
