--- a/changelog.org
+++ b/changelog.org
@@ -13,7 +13,7 @@ Bench marks for 10,000,000 json lines
 bench code:
 #+begin_src nim
 benchmark "Test std json":
-  for x in countup(1, 10_000):
+  for x in countup(1, 10_000_000):
     discard t.parseJson().smartParse(config)
 benchmark "Test Jsony":
   for x in countup(1, 10_000):
