--- a/changelog.org
+++ b/changelog.org
@@ -1,4 +1,8 @@
 * Unreleased
+** [2023-01-06 Fri 04:25] 0.4.0
+Added ~BookerSocialMPost~ to represent a Social Media post on services such as reddit.
+Removed ~owner~ field from ~BookerMessage~ object
+Added ~BookerWebDocument~ Not sure if its needed...
 ** [2023-01-01 Sun 02:01] 0.3.0
 Added ~remap~.
 
