--- a/changelog.org
+++ b/changelog.org
@@ -1,4 +1,10 @@
 * Unreleased
+** [2023-01-23 Mon 21:17] 0.4.3
+EID and UUID based ids are deprecated
+Use md5 or sha1 templates
+Added dtypes for more objects and creating of document ids
+
+[[file:~/Documents/Projects/starintel/doc/starintel_doc.nimble::version = "0.4.3"]]
 ** [2023-01-06 Fri 04:25] 0.4.0
 Added ~BookerSocialMPost~ to represent a Social Media post on services such as reddit.
 Removed ~owner~ field from ~BookerMessage~ object
