--- a/README.org
+++ b/README.org
@@ -13,7 +13,7 @@ to get the lastest devel version use the ~dev~ branch.
 
 ** *NOTICE* MAJOR API CHANGE
 
-if you are using ~starintel_doc~ Please notify [[https://pleroma.nobodyhasthe.biz/nott][me]] encase i wreck your project with version 1.0.0
+if you are using ~starintel_doc~ Please notify me encase i wreck your project with version 1.0.0
 
 The major changes will be relating to the removal of embedded documents and moving to the "relation" object.
 
