--- a/changelog.org
+++ b/changelog.org
@@ -1,4 +1,16 @@
 * Changelog
+** [2023-09-19 Tue 12:18] 0.6.0
++ Renamed Username => User
++ Renamed fields:
+  - User.username => User.name
+  - Asn.asn => Asn.number
+  - Port.port => Port.number
+  - Email.email_username => Email.user
+  - Email.email_domain => Email.domain
++ Switched uuidv4 for Ulid
+  This is much nicer on the database!
++ Removed jsony, uuids from deps.
+[[file:~/Documents/Projects/starintel/spec/doc-nim/src/starintel_doc/relation.nim::Relation: The newly created `Relation` object]]
 ** [2023-08-02 Wed 17:44] 0.5.4 Updated Relations
 The relations enum has been removed, as it made little sense for a graph.
 Added a note field to the ~Relation~ object
